jobs/job_60783810/uncert/errors/benchmark_608/solver_2.txt
INFO: Pointer analysis took 0 sec 13 ms
input.cc:271:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
input.cc:271:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
input.cc:271:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
3 errors generated.
9Hrh7_Ptr2Arr.c:271:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
9Hrh7_Ptr2Arr.c:271:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
9Hrh7_Ptr2Arr.c:271:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
9Hrh7_Ptr2Arr.c:630:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 3 errors generated.
